Warnings fixed; use assert methods instead of assert statement in IndexTest
GitOrigin-RevId: 3dd424a70347aa82025aae9047818b2b6cc11667