@@ -207,6 +207,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     assertNotNull(foo);
     assertTrue(foo.isValid());
     assertEquals("class Foo {}", foo.getText());
+    //noinspection ConstantValue
     assertTrue(foo.isValid());
 
     PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
@@ -332,7 +333,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
 
     final Document document = FileDocumentManager.getInstance().getDocument(vFile);
     assertNotNull(document);
-    assert document.getModificationStamp() == 0;
+    assertEquals(0, document.getModificationStamp());
     assertNotNull(findClass("Foo"));
 
     WriteCommandAction.runWriteCommandAction(getProject(), () -> {
@@ -361,7 +362,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     final PsiFile psiFile = myFixture.addFileToProject("Foo.java", "class Foo {}");
     GlobalSearchScope scope = GlobalSearchScope.allScope(getProject());
 
-    assert FileDocumentManager.getInstance().getUnsavedDocuments().length == 0;
+    assertEquals(0, FileDocumentManager.getInstance().getUnsavedDocuments().length);
 
     WriteCommandAction.runWriteCommandAction(getProject(),
                                              (Computable<PsiElement>)() -> ((PsiJavaFile)psiFile).getImportList()
@@ -369,34 +370,36 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
 
     GCUtil.tryGcSoftlyReachableObjects();
 
-    assert JavaPsiFacade.getInstance(getProject()).findClass("Foo", scope) != null;
+    assertNotNull(JavaPsiFacade.getInstance(getProject()).findClass("Foo", scope));
 
-    assert ((FileManagerImpl)getPsiManager().getFileManager()).getCachedDirectory(psiFile.getVirtualFile().getParent()) == null;
-    WriteCommandAction.runWriteCommandAction(getProject(),() ->{ assert psiFile.setName("Foo1.java").equals(psiFile); });
+    assertNull(((FileManagerImpl)getPsiManager().getFileManager()).getCachedDirectory(psiFile.getVirtualFile().getParent()));
+    WriteCommandAction.runWriteCommandAction(getProject(), () -> {
+      assertEquals(psiFile.setName("Foo1.java"), psiFile);
+    });
 
-    assert FileDocumentManager.getInstance().getUnsavedDocuments().length > 0;
-    assert JavaPsiFacade.getInstance(getProject()).findClass("Foo", scope) != null;
+    assertTrue(FileDocumentManager.getInstance().getUnsavedDocuments().length > 0);
+    assertNotNull(JavaPsiFacade.getInstance(getProject()).findClass("Foo", scope));
   }
 
   public void test_rename_dir_with_unsaved_file() throws IOException {
     final PsiFile psiFile = myFixture.addFileToProject("foo/Foo.java", "package pkg; class Foo {}");
     GlobalSearchScope scope = GlobalSearchScope.allScope(getProject());
 
-    assert FileDocumentManager.getInstance().getUnsavedDocuments().length == 0;
+    assertEquals(0, FileDocumentManager.getInstance().getUnsavedDocuments().length);
 
     WriteCommandAction.runWriteCommandAction(getProject(), (Computable<PsiElement>)() ->
       ((PsiJavaFile)psiFile).getImportList().add(getElementFactory().createImportStatementOnDemand("java.io")));
 
     GCUtil.tryGcSoftlyReachableObjects();
 
-    assert JavaPsiFacade.getInstance(getProject()).findClass("pkg.Foo", scope) != null;
+    assertNotNull(JavaPsiFacade.getInstance(getProject()).findClass("pkg.Foo", scope));
 
     final VirtualFile dir = psiFile.getVirtualFile().getParent();
-    assert ((FileManagerImpl)getPsiManager().getFileManager()).getCachedDirectory(dir) == null;
+    assertNull(((FileManagerImpl)getPsiManager().getFileManager()).getCachedDirectory(dir));
     WriteAction.run(() -> dir.rename(this, "bar"));
 
-    assert FileDocumentManager.getInstance().getUnsavedDocuments().length > 0;
-    assert JavaPsiFacade.getInstance(getProject()).findClass("pkg.Foo", scope) != null;
+    assertTrue(FileDocumentManager.getInstance().getUnsavedDocuments().length > 0);
+    assertNotNull(JavaPsiFacade.getInstance(getProject()).findClass("pkg.Foo", scope));
   }
 
   public void test_language_level_change() {
@@ -408,15 +411,15 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
 
     WriteCommandAction.runWriteCommandAction(getProject(),
                                              (Computable<PsiElement>)() -> CodeStyleManager.getInstance(getProject()).reformat(psiFile));
-    assert JavaPsiFacade.getInstance(getProject()).findClass("Foo", scope) != null;
+    assertNotNull(JavaPsiFacade.getInstance(getProject()).findClass("Foo", scope));
 
     long stamp = FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject());
 
     IdeaTestUtil.setModuleLanguageLevel(myFixture.getModule(), LanguageLevel.JDK_1_3);
 
-    assert ((PsiJavaFile)psiFile).getImportList().getNode() != null;
+    assertNotNull(((PsiJavaFile)psiFile).getImportList().getNode());
 
-    assert stamp != FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject());
+    assertTrue(stamp != FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject()));
   }
 
   public void test_rename_file_with_indexed_associated_unsaved_document_don_t_lost_its_data() {
@@ -446,7 +449,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     PostprocessReformattingAspect.getInstance(getProject()).doPostponedFormatting();
     IdeaTestUtil.setModuleLanguageLevel(myFixture.getModule(), level);
 
-    assert JavaPsiFacade.getInstance(getProject()).findClass("Foo", scope) != null;
+    assertNotNull(JavaPsiFacade.getInstance(getProject()).findClass("Foo", scope));
   }
 
   public void test_language_level_change2() {
@@ -461,13 +464,13 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
                                              (Computable<PsiElement>)() -> CodeStyleManager.getInstance(getProject()).reformat(psiFile));
     PostprocessReformattingAspect.getInstance(getProject()).doPostponedFormatting();
 
-    assert JavaPsiFacade.getInstance(getProject()).findClass("Foo", scope) != null;
+    assertNotNull(JavaPsiFacade.getInstance(getProject()).findClass("Foo", scope));
 
     IdeaTestUtil.setModuleLanguageLevel(myFixture.getModule(), LanguageLevel.JDK_1_3);
-    assert ((PsiJavaFile)getPsiManager().findFile(vFile)).getImportList().getNode() != null;
+    assertNotNull(((PsiJavaFile)getPsiManager().findFile(vFile)).getImportList().getNode());
 
     GCUtil.tryGcSoftlyReachableObjects();
-    assert ((PsiJavaFile)getPsiManager().findFile(vFile)).getImportList().getNode() != null;
+    assertNotNull(((PsiJavaFile)getPsiManager().findFile(vFile)).getImportList().getNode());
   }
 
   public void test_unknown_file_type_in_stubs() throws IOException {
@@ -475,36 +478,36 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     final Document document = FileDocumentManager.getInstance().getDocument(vFile);
     WriteCommandAction.runWriteCommandAction(getProject(), () -> document.setText("class Foo {}"));
     PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
-    assert findClass("Foo") != null;
+    assertNotNull(findClass("Foo"));
 
     WriteAction.run(() -> vFile.rename(null, "Foo1"));
-    assert findClass("Foo") == null;
+    assertNull(findClass("Foo"));
   }
 
   public void test_uncommitted_saved_document_2() {
     final PsiFile file = myFixture.addFileToProject("a.java", "class Foo {}");
     WriteCommandAction.runWriteCommandAction(getProject(), () -> {
-        assert findClass("Foo") != null;
-        file.getViewProvider().getDocument().setText("");
-        PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
-        file.getViewProvider().getDocument().setText("class Foo {}");
-        FileDocumentManager.getInstance().saveAllDocuments();
-      assert findClass("Foo") == null;
-      });
+      assertNotNull(findClass("Foo"));
+      file.getViewProvider().getDocument().setText("");
+      PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
+      file.getViewProvider().getDocument().setText("class Foo {}");
+      FileDocumentManager.getInstance().saveAllDocuments();
+      assertNull(findClass("Foo"));
+    });
   }
 
   public void test_plain_text_file_type_in_stubs() throws IOException {
     final VirtualFile vFile = myFixture.addFileToProject("Foo.java", "class Bar {}").getVirtualFile();
-    assert findClass("Bar") != null;
+    assertNotNull(findClass("Bar"));
     final Document document = FileDocumentManager.getInstance().getDocument(vFile);
     WriteCommandAction.runWriteCommandAction(getProject(), () -> document.setText("class Foo {}"));
     PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
-    assert findClass("Foo") != null;
-    assert findClass("Bar") == null;
+    assertNotNull(findClass("Foo"));
+    assertNull(findClass("Bar"));
 
-    WriteAction.run(() ->vFile.rename(null, "Foo1"));
-    assert findClass("Foo") == null;
-    assert findClass("Bar") == null;
+    WriteAction.run(() -> vFile.rename(null, "Foo1"));
+    assertNull(findClass("Foo"));
+    assertNull(findClass("Bar"));
   }
 
   public void test_changing_a_file_without_psi_makes_the_document_committed_and_updates_index() throws IOException {
@@ -513,8 +516,9 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     GlobalSearchScope scope = GlobalSearchScope.allScope(getProject());
 
     WriteCommandAction.runWriteCommandAction(getProject(),
-                                             () -> FileDocumentManager.getInstance().getDocument(vFile).setText("import zoo.Zoo; class Foo1 {}"));
-    assert PsiDocumentManager.getInstance(getProject()).getUncommittedDocuments().length > 0;
+                                             () -> FileDocumentManager.getInstance().getDocument(vFile)
+                                               .setText("import zoo.Zoo; class Foo1 {}"));
+    assertTrue(PsiDocumentManager.getInstance(getProject()).getUncommittedDocuments().length > 0);
 
     FileDocumentManager.getInstance().saveAllDocuments();
     PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
@@ -523,13 +527,13 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     psiFile = null;
     GCWatcher.tracking(getPsiManager().getFileManager().getCachedPsiFile(vFile))
       .ensureCollected(() -> UIUtil.dispatchAllInvocationEvents());
-    assert getPsiManager().getFileManager().getCachedPsiFile(vFile) == null;
+    assertNull(getPsiManager().getFileManager().getCachedPsiFile(vFile));
 
     WriteAction.run(() -> VfsUtil.saveText(vFile, "class Foo3 {}"));
 
-    assert PsiDocumentManager.getInstance(getProject()).getUncommittedDocuments().length == 0;
+    assertEquals(0, PsiDocumentManager.getInstance(getProject()).getUncommittedDocuments().length);
 
-    assert JavaPsiFacade.getInstance(getProject()).findClass("Foo3", scope) != null;
+    assertNotNull(JavaPsiFacade.getInstance(getProject()).findClass("Foo3", scope));
   }
 
   public void test_rename_file_invalidates_indices_in_right_order() throws IOException {
@@ -553,7 +557,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     long stamp = FileBasedIndex.getInstance().getIndexModificationStamp(IdIndex.NAME, getProject());
     //assertIsIndexed(vFile) FIXME-ank: not indexed, because indexing changes file's modCounter
 
-    WriteAction.run(() ->VfsUtil.saveText(vFile, "Foo class"));
+    WriteAction.run(() -> VfsUtil.saveText(vFile, "Foo class"));
     IndexingRequestToken indexingRequest =
       getProject().getService(ProjectIndexingDependenciesService.class).getLatestIndexingRequestToken();
     assertFalse(IndexingFlag.isFileIndexed(vFile, indexingRequest.getFileIndexingStamp(vFile)));
@@ -564,7 +568,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     assertTrue(stamp != FileBasedIndex.getInstance().getIndexModificationStamp(IdIndex.NAME, getProject()));
 
     final Document document = FileDocumentManager.getInstance().getDocument(vFile);
-    WriteCommandAction.runWriteCommandAction(getProject(), () ->document.setText("Foo2 class"));
+    WriteCommandAction.runWriteCommandAction(getProject(), () -> document.setText("Foo2 class"));
     stamp = FileBasedIndex.getInstance().getIndexModificationStamp(IdIndex.NAME, getProject());
     WriteCommandAction.runWriteCommandAction(getProject(), () -> document.setText("class Foo2"));
     assertEquals(stamp, FileBasedIndex.getInstance().getIndexModificationStamp(IdIndex.NAME, getProject()));
@@ -578,7 +582,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     stamp = FileBasedIndex.getInstance().getIndexModificationStamp(JavaFunctionalExpressionIndex.INDEX_ID, getProject());
     WriteCommandAction.runWriteCommandAction(getProject(), () -> document.setText("class Foo { Runnable x = () -> { }; }"));
     PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
-    assert stamp == FileBasedIndex.getInstance().getIndexModificationStamp(JavaFunctionalExpressionIndex.INDEX_ID, getProject());
+    assertEquals(stamp, FileBasedIndex.getInstance().getIndexModificationStamp(JavaFunctionalExpressionIndex.INDEX_ID, getProject()));
   }
 
   private void assertIsIndexed(VirtualFile vFile) {
@@ -670,7 +674,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     final VirtualFile vFile = myFixture.addClass("class Foo {}").getContainingFile().getVirtualFile();
 
     Ref<PsiClass> clazz = Ref.create(findClass("Foo"));
-    assert clazz.get() != null;
+    assertNotNull(clazz.get());
 
     runFindClassStubIndexQueryThatProducesInvalidResult("Foo");
 
@@ -684,7 +688,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     PsiDocumentManager.getInstance(getProject()).commitDocument(document);
 
     clazz = Ref.create(findClass("Foo2"));
-    assert clazz.get() != null;
+    assertNotNull(clazz.get());
 
     runFindClassStubIndexQueryThatProducesInvalidResult("Foo2");
 
@@ -748,71 +752,55 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     final String className = "Foo";
     final VirtualFile vfile = myFixture.addClass("class " + className + " { void bar() {} }").getContainingFile().getVirtualFile();
     final GlobalSearchScope scope = GlobalSearchScope.allScope(getProject());
-    final List<Boolean> foundClass = new ArrayList<>(Arrays.asList(false));
-    final List<Boolean> foundMethod = new ArrayList<>(Arrays.asList(false));
+    final List<Boolean> foundClass = new ArrayList<>(List.of(false));
+    final List<Boolean> foundMethod = new ArrayList<>(List.of(false));
 
-    try {
-      StubIndex.getInstance()
-        .processElements(JavaStubIndexKeys.CLASS_SHORT_NAMES, className, getProject(), scope, PsiClass.class, aClass -> {
-          foundClass.set(0, true);
-          StubIndex.getInstance()
-            .processElements(JavaStubIndexKeys.METHODS, "bar", getProject(), scope, PsiMethod.class, method -> {
-              foundMethod.set(0, true);
-              return true;
-            });
-          return true;
-        });
-    }
-    catch (Exception e) {
-      if (!(e instanceof RuntimeException)) throw e;
-    }
+    StubIndex.getInstance()
+      .processElements(JavaStubIndexKeys.CLASS_SHORT_NAMES, className, getProject(), scope, PsiClass.class, aClass -> {
+        foundClass.set(0, true);
+        StubIndex.getInstance()
+          .processElements(JavaStubIndexKeys.METHODS, "bar", getProject(), scope, PsiMethod.class, method -> {
+            foundMethod.set(0, true);
+            return true;
+          });
+        return true;
+      });
 
 
     assertTrue(foundClass.get(0));
     assertTrue(foundMethod.get(0));// allow access stub index processing other index
 
-    final List<Boolean> foundClassProcessAll = new ArrayList<>(Arrays.asList(false));
-    final List<Boolean> foundClassStub = new ArrayList<>(Arrays.asList(false));
+    final List<Boolean> foundClassProcessAll = new ArrayList<>(List.of(false));
+    final List<Boolean> foundClassStub = new ArrayList<>(List.of(false));
 
-    try {
-      StubIndex.getInstance().processAllKeys(JavaStubIndexKeys.CLASS_SHORT_NAMES, getProject(), aClass -> {
-        if (!className.equals(aClass)) return true;
-        foundClassProcessAll.set(0, true);
-        StubIndex.getInstance()
-          .processElements(JavaStubIndexKeys.CLASS_SHORT_NAMES, aClass, getProject(), scope, PsiClass.class, clazz -> {
-            foundClassStub.set(0, true);
-            return true;
-          });
-        return true;
-      });
-    }
-    catch (Exception e) {
-      if (!(e instanceof RuntimeException)) throw e;
-    }
-
+    StubIndex.getInstance().processAllKeys(JavaStubIndexKeys.CLASS_SHORT_NAMES, getProject(), aClass -> {
+      if (!className.equals(aClass)) return true;
+      foundClassProcessAll.set(0, true);
+      StubIndex.getInstance()
+        .processElements(JavaStubIndexKeys.CLASS_SHORT_NAMES, aClass, getProject(), scope, PsiClass.class, clazz -> {
+          foundClassStub.set(0, true);
+          return true;
+        });
+      return true;
+    });
 
     assertTrue(foundClassProcessAll.get(0));
     assertTrue(foundClassStub.get(0));
 
-    final List<Boolean> foundId = new ArrayList<>(Arrays.asList(false));
-    final List<Boolean> foundStub = new ArrayList<>(Arrays.asList(false));
+    final List<Boolean> foundId = new ArrayList<>(List.of(false));
+    final List<Boolean> foundStub = new ArrayList<>(List.of(false));
 
-    try {
-      FileBasedIndex.getInstance()
-        .processValues(IdIndex.NAME, new IdIndexEntry("Foo", true), null, (file, value) -> {
-          foundId.set(0, true);
-          FileBasedIndex.getInstance()
-            .processValues(StubUpdatingIndex.INDEX_ID, assertInstanceOf(vfile, VirtualFileWithId.class).getId(), null,
-                           (file2, value2) -> {
-                             foundStub.set(0, true);
-                             return true;
-                           }, scope);
-          return true;
-        }, scope);
-    }
-    catch (Exception e) {
-      if (!(e instanceof RuntimeException)) throw e;
-    }
+    FileBasedIndex.getInstance()
+      .processValues(IdIndex.NAME, new IdIndexEntry("Foo", true), null, (file, value) -> {
+        foundId.set(0, true);
+        FileBasedIndex.getInstance()
+          .processValues(StubUpdatingIndex.INDEX_ID, assertInstanceOf(vfile, VirtualFileWithId.class).getId(), null,
+                         (file2, value2) -> {
+                           foundStub.set(0, true);
+                           return true;
+                         }, scope);
+        return true;
+      }, scope);
 
 
     assertTrue(foundId.get(0));
@@ -861,44 +849,44 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     String fileName = "test.txt";
     final VirtualFile testFile = myFixture.addFileToProject(fileName, "test").getVirtualFile();
 
-    assert ("file: " + fileName + "; operation: UPDATE ADD").equals(listener.indexingOperation(testFile));
+    assertEquals(("file: " + fileName + "; operation: UPDATE ADD"), listener.indexingOperation(testFile));
 
     FileContentUtilCore.reparseFiles(Collections.singletonList(testFile));
 
-    assert ("file: " + fileName + "; operation: ADD").equals(listener.indexingOperation(testFile));
+    assertEquals(("file: " + fileName + "; operation: ADD"), listener.indexingOperation(testFile));
 
     WriteAction.run(() -> VfsUtil.saveText(testFile, "foo"));
     WriteAction.run(() -> VfsUtil.saveText(testFile, "bar"));
 
-    assert ("file: " + fileName + "; operation: UPDATE").equals(listener.indexingOperation(testFile));
+    assertEquals(("file: " + fileName + "; operation: UPDATE"), listener.indexingOperation(testFile));
 
     WriteAction.run(() -> VfsUtil.saveText(testFile, "baz"));
     WriteAction.run(() -> testFile.delete(null));
 
-    assert ("file: " + fileName + "; operation: REMOVE").equals(listener.indexingOperation(testFile));
+    assertEquals(("file: " + fileName + "; operation: REMOVE"), listener.indexingOperation(testFile));
   }
 
   public void test_files_inside_copied_directory_are_indexed() throws IOException {
     JavaPsiFacade facade = JavaPsiFacade.getInstance(getProject());
 
     final PsiFile srcFile = myFixture.addFileToProject("foo/bar/A.java", "class A {}");
-    assert facade.findClass("A", GlobalSearchScope.moduleScope(getModule())) != null;
+    assertNotNull(facade.findClass("A", GlobalSearchScope.moduleScope(getModule())));
 
     final VirtualFile anotherDir = myFixture.getTempDirFixture().findOrCreateDir("another");
     Module anotherModule = PsiTestUtil.addModule(getProject(), StdModuleTypes.JAVA, "another", anotherDir);
-    assert facade.findClass("A", GlobalSearchScope.moduleScope(anotherModule)) == null;
+    assertNull(facade.findClass("A", GlobalSearchScope.moduleScope(anotherModule)));
 
     WriteAction.run(() -> srcFile.getVirtualFile().getParent().copy(this, anotherDir, "doo"));
 
-    assert facade.findClass("A", GlobalSearchScope.moduleScope(anotherModule)) != null;
-    assert JavaFileElementType.isInSourceContent(myFixture.getTempDirFixture().getFile("another/doo/A.java"));
+    assertNotNull(facade.findClass("A", GlobalSearchScope.moduleScope(anotherModule)));
+    assertTrue(JavaFileElementType.isInSourceContent(myFixture.getTempDirFixture().getFile("another/doo/A.java")));
   }
 
   public void test_requesting_nonexisted_index_fails_as_expected() {
-    ID<?, ?> myId = ID.create("my.id");
+    ID<Object, Object> myId = ID.create("my.id");
     try {
-      FileBasedIndex.getInstance().getContainingFiles((ID<Object, Object>)myId, "null", GlobalSearchScope.allScope(getProject()));
-      FileBasedIndex.getInstance().processAllKeys((ID<Object, ?>)myId, CommonProcessors.alwaysTrue(), getProject());
+      FileBasedIndex.getInstance().getContainingFiles(myId, "null", GlobalSearchScope.allScope(getProject()));
+      FileBasedIndex.getInstance().processAllKeys(myId, CommonProcessors.alwaysTrue(), getProject());
       fail();
     }
     catch (IllegalStateException ignored) {
@@ -924,7 +912,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
 
   public void test_commit_without_reparse_properly_changes_index() {
     PsiFile srcFile = myFixture.addFileToProject("A.java", "class A {}");
-    assert findClass("A") != null;
+    assertNotNull(findClass("A"));
 
     final Document document = FileDocumentManager.getInstance().getDocument(srcFile.getVirtualFile());
     WriteCommandAction.runWriteCommandAction(getProject(), () -> document.replaceString(0, document.getTextLength(), "class B {}"));
@@ -954,15 +942,14 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
 
     WriteCommandAction.runWriteCommandAction(getProject(), () -> getPsiManager().reloadFromDisk(file));
 
-    assert findClass("Foo") != null;
+    assertNotNull(findClass("Foo"));
   }
 
   public void test_read_only_index_has_read_only_storages() throws IOException {
     MapReduceIndex<String, String, ?> index = createIndex(getTestName(false), new EnumeratorStringDescriptor(), true).getIndex();
 
     try {
-      MapReduceIndex mapReduceIndex = assertInstanceOf(index, MapReduceIndex.class);
-      MapIndexStorage<String, String> storage = assertInstanceOf(mapReduceIndex.getStorage(), MapIndexStorage.class);
+      MapIndexStorage<String, String> storage = assertInstanceOf(index.getStorage(), MapIndexStorage.class);
       PersistentMapImpl<String, UpdatableValueContainer<String>> map =
         assertInstanceOf(storage.getIndexMap(), PersistentMapImpl.class);
       assertTrue(map.getReadOnly());
@@ -979,7 +966,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
 
     PlatformTestUtil.startPerformanceTest("Vfs Event Processing By Index", 1000, () -> {
       PsiFile[] files = FilenameIndex.getFilesByName(getProject(), filename, GlobalSearchScope.moduleScope(getModule()));
-      assert files.length == 1;
+      assertEquals(1, files.length);
 
       VirtualFile file = files[0].getVirtualFile();
 
@@ -1013,12 +1000,15 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
       JavaPsiFacade.getInstance(getProject()).findClass(Thread.class.getName(), GlobalSearchScope.allScope(getProject()));
     final VirtualFile srcRoot = myFixture.getTempDirFixture().getFile("");
     WriteCommandAction.runWriteCommandAction(getProject(),
-                                             (ThrowableComputable<VirtualFile, IOException>)() -> VfsUtil.copy(this, thread.getContainingFile().getVirtualFile(), srcRoot));
+                                             (ThrowableComputable<VirtualFile, IOException>)() -> VfsUtil.copy(this,
+                                                                                                               thread.getContainingFile()
+                                                                                                                 .getVirtualFile(),
+                                                                                                               srcRoot));
 
     GlobalSearchScope projectScope = GlobalSearchScope.projectScope(getProject());
-    assert JavaOverridingMethodUtil.getOverridingMethodsIfCheapEnough(runnable.getMethods()[0], projectScope,
-                                                                       unused -> true).findFirst().isEmpty();
-    assert StubIndex.getElements(JavaStubIndexKeys.METHODS, "run", getProject(), projectScope, PsiMethod.class).isEmpty();
+    assertTrue(JavaOverridingMethodUtil.getOverridingMethodsIfCheapEnough(runnable.getMethods()[0], projectScope,
+                                                                          unused -> true).findFirst().isEmpty());
+    assertTrue(StubIndex.getElements(JavaStubIndexKeys.METHODS, "run", getProject(), projectScope, PsiMethod.class).isEmpty());
   }
 
   public void test_text_todo_indexing_checks_for_cancellation() {
@@ -1067,26 +1057,21 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     myFixture.addClass("class " + className + " {}");
     final GlobalSearchScope scope = GlobalSearchScope.allScope(getProject());
 
-    final List<Boolean> foundClassProcessAll = new ArrayList<>(Arrays.asList(false));
-    final List<Boolean> foundClassStub = new ArrayList<>(Arrays.asList(false));
+    final List<Boolean> foundClassProcessAll = new ArrayList<>(List.of(false));
+    final List<Boolean> foundClassStub = new ArrayList<>(List.of(false));
 
-    try {
-      StubIndex.getInstance().processAllKeys(JavaStubIndexKeys.CLASS_SHORT_NAMES, getProject(), aClass -> {
-        if (!className.equals(aClass)) return true;
-        foundClassProcessAll.set(0, true);
-        // adding file will add file to index's dirty set, but it should not be processed within current read action
-        myFixture.addFileToProject("Bar.java", "class Bar { }");
-        StubIndex.getInstance()
-          .processElements(JavaStubIndexKeys.CLASS_SHORT_NAMES, aClass, getProject(), scope, PsiClass.class, clazz -> {
-            foundClassStub.set(0, true);
-            return true;
-          });
-        return true;
-      });
-    }
-    catch (Exception e) {
-      if (!(e instanceof RuntimeException)) throw e;
-    }
+    StubIndex.getInstance().processAllKeys(JavaStubIndexKeys.CLASS_SHORT_NAMES, getProject(), aClass -> {
+      if (!className.equals(aClass)) return true;
+      foundClassProcessAll.set(0, true);
+      // adding file will add file to index's dirty set, but it should not be processed within current read action
+      myFixture.addFileToProject("Bar.java", "class Bar { }");
+      StubIndex.getInstance()
+        .processElements(JavaStubIndexKeys.CLASS_SHORT_NAMES, aClass, getProject(), scope, PsiClass.class, clazz -> {
+          foundClassStub.set(0, true);
+          return true;
+        });
+      return true;
+    });
 
     assertTrue(foundClassProcessAll.get(0));
     assertTrue(foundClassStub.get(0));// allow access stub index processing other index
@@ -1150,17 +1135,17 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
   public void test_IDEA_188028() throws IOException {
     final PsiJavaFileImpl file = (PsiJavaFileImpl)myFixture.addFileToProject("a.java", "class Foo {}");
     WriteCommandAction.runWriteCommandAction(getProject(), (ThrowableComputable<?, IOException>)() -> {
-        Document document = file.getViewProvider().getDocument();
-        document.setText("");
-        PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
-        PsiManager.getInstance(getProject()).reloadFromDisk(file);
-        document.setText("");
-      assert findClass("Foo") == null;
-        file.getVirtualFile().rename(this, "a1.java");
-        PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
-      assert findClass("Foo") == null;
-        return null;
-      });
+      Document document = file.getViewProvider().getDocument();
+      document.setText("");
+      PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
+      PsiManager.getInstance(getProject()).reloadFromDisk(file);
+      document.setText("");
+      assertNull(findClass("Foo"));
+      file.getVirtualFile().rename(this, "a1.java");
+      PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
+      assertNull(findClass("Foo"));
+      return null;
+    });
   }
 
   public void test_every_directory_and_file_are_marked_as_indexed_in_open_project() {
@@ -1183,7 +1168,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     assertIsIndexed(main);
     assertIsIndexed(src);
 
-    assert findClass("Foo") != null;// ensure content dependent indexes are passed
+    assertNotNull(findClass("Foo"));
 
     //assertIsIndexed(foo) // FIXME-ank: not indexed, because indexing changes file's modCounter
   }
@@ -1204,12 +1189,12 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
       PsiFile file = myFixture.addClass("class Foo {}").getContainingFile();
 
       ((PsiJavaFile)file).getImportList().add(JavaPsiFacade.getElementFactory(getProject()).createImportStatementOnDemand("java.io"));
-      assert findClass("Foo") != null;
+      assertNotNull(findClass("Foo"));
       PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
       assertTrue(stamp != FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject()));
       stamp = FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject());
 
-      assert findClass("Foo") != null;
+      assertNotNull(findClass("Foo"));
       PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
       assertEquals(stamp, FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject()));
       stamp = FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject());
@@ -1218,31 +1203,33 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
       PsiManager.getInstance(getProject()).reloadFromDisk(file);
       assertTrue(stamp != FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject()));
 
-      assert findClass("Foo") != null;
+      assertNotNull(findClass("Foo"));
       PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
       assertTrue(stamp != FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject()));
       stamp = FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject());
 
       findClass("Foo").replace(findClass("Foo").copy());
-      assert findClass("Foo") != null;
+      assertNotNull(findClass("Foo"));
       assertEquals(stamp, FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject()));
-      });
+    });
   }
 
   public void test_non_empty_memory_storage_cleanup_advances_index_modification_stamp() {
     long stamp = FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject());
     final PsiFile file = myFixture.addClass("class Foo {}").getContainingFile();
-    assert findClass("Foo") != null;
+    assertNotNull(findClass("Foo"));
     assertTrue(stamp != FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject()));
     stamp = FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject());
 
-    WriteCommandAction.runWriteCommandAction(getProject(), (Computable<PsiElement>)() -> ((PsiJavaFile)file).getImportList().add(JavaPsiFacade.getElementFactory(getProject()).createImportStatementOnDemand("java.io")));
-    assert findClass("Foo") != null;
+    WriteCommandAction.runWriteCommandAction(getProject(), (Computable<PsiElement>)() -> ((PsiJavaFile)file).getImportList()
+      .add(JavaPsiFacade.getElementFactory(getProject()).createImportStatementOnDemand("java.io")));
+    assertNotNull(findClass("Foo"));
     assertTrue(stamp != FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject()));
     stamp = FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject());
 
-    WriteCommandAction.runWriteCommandAction(getProject(), () -> ((FileDocumentManagerImpl)FileDocumentManager.getInstance()).dropAllUnsavedDocuments());
-    assert findClass("Foo") != null;
+    WriteCommandAction.runWriteCommandAction(getProject(),
+                                             () -> ((FileDocumentManagerImpl)FileDocumentManager.getInstance()).dropAllUnsavedDocuments());
+    assertNotNull(findClass("Foo"));
     assertTrue(stamp != FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject()));
   }
 
@@ -1298,7 +1285,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     ObjectStubTree<?> stub = StubTreeLoader.getInstance().readFromVFile(getProject(), virtualFile);
     assertStubLanguage(GroovyLanguage.INSTANCE, stub);
     assertEquals(GroovyLanguage.INSTANCE, file.getLanguage());
-    assert findClass("Foo") != null;
+    assertNotNull(findClass("Foo"));
     final ExactFileNameMatcher matcher = new ExactFileNameMatcher("Foo.groovy");
     try {
       WriteCommandAction.runWriteCommandAction(getProject(), () -> FileTypeManager.getInstance().associate(JavaFileType.INSTANCE, matcher));
@@ -1313,7 +1300,8 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
       assertEquals(JavaLanguage.INSTANCE, javaFooClass.getLanguage());
     }
     finally {
-      WriteCommandAction.runWriteCommandAction(getProject(), () -> FileTypeManager.getInstance().removeAssociation(JavaFileType.INSTANCE, matcher));
+      WriteCommandAction.runWriteCommandAction(getProject(),
+                                               () -> FileTypeManager.getInstance().removeAssociation(JavaFileType.INSTANCE, matcher));
     }
   }
 
@@ -1326,7 +1314,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     UpdatableIndex<IdIndexEntry, Integer, FileContent, ?> idIndex =
       ((FileBasedIndexImpl)fbi).getIndex(IdIndex.NAME);
 
-    IntForwardIndex idIndexForwardIndex = (IntForwardIndex)((VfsAwareMapReduceIndex)idIndex).getForwardIndex();
+    IntForwardIndex idIndexForwardIndex = (IntForwardIndex)((VfsAwareMapReduceIndex<?, ?, ?>)idIndex).getForwardIndex();
 
     // id index depends on file type
     assertFalse(idIndexForwardIndex.getInt(javaFileId) == 0);
@@ -1368,7 +1356,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     RecursionManager.disableMissedCacheAssertions(getTestRootDisposable());
 
     final PsiClass clazz = myFixture.addClass("class Foo {}");
-    assert clazz.equals(myFixture.findClass("Foo"));
+    assertEquals(clazz, myFixture.findClass("Foo"));
 
     DumbModeTestUtils.runInDumbModeSynchronously(getProject(), () -> {
       final AtomicInteger indexQueries = new AtomicInteger(0);
@@ -1392,22 +1380,22 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
 
       // index queries aren't cached
       for (int i = 0; i < 5; i++) {
-        assert clazz.equals(FileBasedIndex.getInstance().ignoreDumbMode(DumbModeAccessType.RELIABLE_DATA_ONLY, asComputable(stubQuery)));
+        assertEquals(clazz, FileBasedIndex.getInstance().ignoreDumbMode(DumbModeAccessType.RELIABLE_DATA_ONLY, asComputable(stubQuery)));
       }
-      assert indexQueries.get() >= 5;
+      assertTrue(indexQueries.get() >= 5);
 
       indexQueries.set(0);
-      assert FileBasedIndex.getInstance().ignoreDumbMode(DumbModeAccessType.RAW_INDEX_DATA_ACCEPTABLE, asComputable(idQuery));
-      assert FileBasedIndex.getInstance().ignoreDumbMode(DumbModeAccessType.RELIABLE_DATA_ONLY, asComputable(idQuery));
-      assert indexQueries.get() >= 2;
+      assertTrue(FileBasedIndex.getInstance().ignoreDumbMode(DumbModeAccessType.RAW_INDEX_DATA_ACCEPTABLE, asComputable(idQuery)));
+      assertTrue(FileBasedIndex.getInstance().ignoreDumbMode(DumbModeAccessType.RELIABLE_DATA_ONLY, asComputable(idQuery)));
+      assertTrue(indexQueries.get() >= 2);
 
       // non-index queries should work as usual
       for (int i = 0; i < 3; i++) {
-        assert "x".equals(
-          FileBasedIndex.getInstance().ignoreDumbMode(DumbModeAccessType.RAW_INDEX_DATA_ACCEPTABLE, asComputable(plainValue)));
-        assert "x".equals(FileBasedIndex.getInstance().ignoreDumbMode(DumbModeAccessType.RELIABLE_DATA_ONLY, asComputable(plainValue)));
+        assertEquals("x",
+                     FileBasedIndex.getInstance().ignoreDumbMode(DumbModeAccessType.RAW_INDEX_DATA_ACCEPTABLE, asComputable(plainValue)));
+        assertEquals("x", FileBasedIndex.getInstance().ignoreDumbMode(DumbModeAccessType.RELIABLE_DATA_ONLY, asComputable(plainValue)));
       }
-      assert plainQueries.get() > 0 && plainQueries.get() < 3 * 2;
+      assertTrue(plainQueries.get() > 0 && plainQueries.get() < 3 * 2);
 
       // cache queries inside single ignoreDumbMode
       indexQueries.set(0);
@@ -1415,9 +1403,9 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
       FileBasedIndex.getInstance()
         .ignoreDumbMode(DumbModeAccessType.RAW_INDEX_DATA_ACCEPTABLE, () -> {
           for (int i = 0; i < 5; i++) {
-            assert idQuery.getValue();
+            assertTrue(idQuery.getValue());
           }
-          assert indexQueries.get() > 0 && indexQueries.get() < 5;
+          assertTrue(indexQueries.get() > 0 && indexQueries.get() < 5);
         });
 
       indexQueries.set(0);
@@ -1425,9 +1413,9 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
       FileBasedIndex.getInstance()
         .ignoreDumbMode(DumbModeAccessType.RELIABLE_DATA_ONLY, () -> {
           for (int i = 0; i < 5; i++) {
-            assert clazz.equals(stubQuery.getValue());
+            assertEquals(clazz, stubQuery.getValue());
           }
-          assert indexQueries.get() > 0 && indexQueries.get() < 5;
+          assertTrue(indexQueries.get() > 0 && indexQueries.get() < 5);
         });
     });
   }
@@ -1436,17 +1424,18 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     RecursionManager.disableMissedCacheAssertions(getTestRootDisposable());
 
     final PsiClass clazz = myFixture.addClass("class Foo {}");
-    assert clazz.equals(myFixture.findClass("Foo"));
+    assertEquals(clazz, myFixture.findClass("Foo"));
 
     DumbModeTestUtils.runInDumbModeSynchronously(getProject(), () -> {
       final CachedValue<PsiClass> stubQuery = CachedValuesManager.getManager(getProject()).createCachedValue(() -> {
-        return CachedValueProvider.Result.create(myFixture.getJavaFacade().findClass("Foo", GlobalSearchScope.allScope(getProject())),PsiModificationTracker.MODIFICATION_COUNT);
+        return CachedValueProvider.Result.create(myFixture.getJavaFacade().findClass("Foo", GlobalSearchScope.allScope(getProject())),
+                                                 PsiModificationTracker.MODIFICATION_COUNT);
       });
 
-      FileBasedIndex.getInstance().ignoreDumbMode(DumbModeAccessType.RELIABLE_DATA_ONLY, () ->  {
-        assert clazz.equals(stubQuery.getValue());
+      FileBasedIndex.getInstance().ignoreDumbMode(DumbModeAccessType.RELIABLE_DATA_ONLY, () -> {
+        assertEquals(clazz, stubQuery.getValue());
         WriteCommandAction.runWriteCommandAction(getProject(), (Computable<PsiElement>)() -> clazz.setName("Bar"));
-        assert null == stubQuery.getValue();
+        assertNull(stubQuery.getValue());
       });
     });
   }
